[gd_scene load_steps=9 format=3 uid="uid://cyh0gwhscg7pl"]

[ext_resource type="FontFile" uid="uid://c0xl8v404kqjg" path="res://assets/fonts/Poppins-Regular.ttf" id="1_2fbfq"]
[ext_resource type="Script" uid="uid://ccif8cirxtgoc" path="res://scripts/useless2.gd" id="3_mah5v"]
[ext_resource type="FontFile" uid="uid://35xk5r8kfyyf" path="res://assets/fonts/PressStart2P-Regular.ttf" id="4_kyhnv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.7389058, 0.6833905, 0.4853295, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.69803923)
shadow_size = 5
shadow_offset = Vector2(0, 1.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.6872153, 0.6872149, 0.6872149, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.69803923)
shadow_size = 5
shadow_offset = Vector2(0, 1.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.75398386, 0.7539839, 0.7539835, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.69803923)
shadow_size = 5
shadow_offset = Vector2(0, 1.6)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vue75"]

[node name="credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bqqt6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.578
anchor_right = 0.5
anchor_bottom = 0.578
offset_left = -59.0
offset_top = 86.45599
offset_right = 61.0
offset_bottom = 109.45599
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Back to Main Menu"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2fbfq")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vue75")
text = "Back"
script = ExtResource("3_mah5v")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -178.0
offset_right = 360.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8627451, 0.8627451, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_kyhnv")
theme_override_font_sizes/font_size = 55
text = "Credits!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.51000005
offset_left = -168.0
offset_top = -41.0
offset_right = 156.0
offset_bottom = 65.51996
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.7802059, 0.9180604, 0.822876, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_kyhnv")
theme_override_font_sizes/font_size = 26
text = "Hack Club
Pixabay
Mystic Woods
DevWorm"
vertical_alignment = 1

[node name="FootNote" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 172.0
offset_right = 192.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
tooltip_auto_translate_mode = 1
theme_override_colors/font_color = Color(0.8627451, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_kyhnv")
theme_override_font_sizes/font_size = 12
text = "A game for Hack Club Milkyway!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Back" to="VBoxContainer/Back" method="_on_pressed_1"]
